# ssd_frame_compare

./: README.md  __init__.py  compare_frames.py  pyproject.toml  video_compare.py
web/: compare_frames.js  video_compare.js
